# tidal_discord_rich_presence

./: Cargo.toml  README.md  tidal_discord_rich_presence.json  tidal_richpresence_config.json
src/: discord.rs  main.rs  tidal.rs
